Fix overflow element and hidden navbar

--- a/src/assets/css/gallery/galleryPage.css
+++ b/src/assets/css/gallery/galleryPage.css
@@ -1,8 +1,8 @@
-.gallery {
+/* .gallery {
     position: relative;
     display: flex;
     width: 100vw;
-}
+} */
 
 
 .gallery-image {
@@ -12,10 +12,10 @@
     justify-content: center;
 }
   
-.grid {
+/* .grid {
     position: absolute;
-    z-index: 1;
-}
+    z-index: 0;
+} */
 
 .lightboxObj{
     position: absolute;
