--- a/src/assets/css/header_footer/header_footer.css
+++ b/src/assets/css/header_footer/header_footer.css
@@ -115,6 +115,7 @@ nav {
     color: var(--text-color-dark);
     padding-block: 0.8rem;
     position: fixed;
+    z-index: 1;
     width: 100%;
 }
 
