--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -25,7 +25,7 @@ body {
 }
 
 header {
-  padding: 5em 0 5em 0;
+  padding: 10em 0 5em 0;
   background-image: linear-gradient(#020a23, #020a23);
   /* background-image: -webkit-linear-gradient(top,#020A23, #020A23); */
   background-attachment: fixed;
